--- a/week01/first-page.html
+++ b/week01/first-page.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>My First Page</h1>
-    <p>My favorite color is: </p>
+    <p>My favorite color is: Blue</p>
+    <p>I am learning Web development!</p>
+    <p>Web development is fun! I will put in my best and ensure that I master this course,</p> 
+    <p>so that i will be successful and become a Billonaire in the future.</p>
 </body>
 </html>
