add my home page index.html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-Us">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Patience Friday | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Patience Friday | WDD 130</h1>
+        <img src="images/profile.jpg" alt="Hello, I am Patience Friday" width="200">
+        <p>Hello, my name is Patience Friday and I am from Akwa ibom state, Nigeria.
+            I am studying web development in BYU Pathway Worldwide. This is a great opportunity and
+            I am excited to be in this class. I hope to acquire as much knowledge as I can, so I can
+            be successful in the industry.</p>
+    </main>
+    <footer>
+        <p>©2025 🌷 Patience Friday 🌷 Uyo, Nigeria</p>
+    </footer>
 </body>
+
 </html>
