add  paragraph changes to index.html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
     <main>
         <h1>Patience Friday | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, I am Patience Friday" width="200">
-        <p>Hello, my name is Patience Friday and I am from Akwa ibom state, Nigeria.
-            I am studying web development in BYU Pathway Worldwide. This is a great opportunity and
-            I am excited to be in this class. I hope to acquire as much knowledge as I can, so I can
-            be successful in the industry.</p>
+        <p>Hello, my name is Patience Friday and I am from Akwa ibom state, Nigeria. I am studying web development in
+            BYU Pathway Worldwide. This is a great opportunity and I am excited to be in this class. I hope to acquire
+            as much knowledge as I can, so I can be successful in the industry.</p>
     </main>
     <footer>
         <p>©2025 🌷 Patience Friday 🌷 Uyo, Nigeria</p>
