add changes to basic-layout.html

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -1,11 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>placeholder</title>
+    <title>Basic HTML Structure</title>
+    <meta name="description" content="A basic HTML structure example using semantic HTML elements">
+    <meta name="author" content="Patience Friday">
 </head>
+
 <body>
-    
+    <header>
+        <img src="images/basic-logo.png" alt="HTML Layout Logo" width="128" height="128">
+    </header>
+    <nav>
+        <ul>
+            <li><a href="https://www.byui.edu">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/?lang=eng">The Church</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>Basic HTML Structure</h1>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt, nam?</p>
+        </section>
+        <section>
+            <h2>Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro, molestias.</p>
+        </section>
+    </main>
+    <aside>
+        <img scr="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/albuquerque-new-mexico/800x800/albuquerque-temple-lds-137885-wallpaper.jpg"
+            alt="Albuquerque new Mexico Temple" width="200">
+    </aside>
+    <footer>
+        <p> 🌷 Patience Friday</p>
+    </footer>
+
 </body>
+
 </html>
