add image changes to basic-layout.html

--- a/week02/basic-layout.html
+++ b/week02/basic-layout.html
@@ -32,10 +32,10 @@
     </main>
     <aside>
         <img scr="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/albuquerque-new-mexico/800x800/albuquerque-temple-lds-137885-wallpaper.jpg"
-            alt="Albuquerque new Mexico Temple" width="200">
+            alt="Albuquerque New Mexico Temple" width="200">
     </aside>
     <footer>
-        <p> 🌷 Patience Friday</p>
+        <p>🌷 Patience Friday</p>
     </footer>
 
 </body>
