add changes to index.html and style.css

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patience Aniekan Friday | WDD 130</title>
+    <meta name="description" content="Patience Friday - BYU Idaho WDD 130 course home page">
+    <meta name="author" content="Patience Friday">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -22,6 +24,18 @@
             BYU Pathway Worldwide. This is a great opportunity and I am excited to be in this class. I hope to acquire
             as much knowledge as I can, so I can be successful in the industry.</p>
     </main>
+    <aside>
+        <h2>Akwa Ibom State</h2>
+        <img src="images/uyo.jpg" alt="Uyo, Nigeria">
+        <p>Uyo, the capital city of Akwa Ibom State in southern Nigeria, is a clean, calm, and rapidly developing city
+            known for
+            its well-planned roads and welcoming atmosphere. It is home to modern landmarks like the Godswill Akpabio
+            International
+            Stadium, Ibom Tropicana, and the peaceful Ibom Plaza where the city’s major roads meet. Uyo is also
+            recognized for its
+            rich culture, delicious cuisine, especially dishes made with fresh seafood and the warm hospitality of its
+            people.</p>
+    </aside>
     <footer>
         <p>©2025 🌷 Patience Friday 🌷 Uyo, Nigeria</p>
     </footer>
