add meta changes to index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Patience Aniekan Friday | WDD 130</title>
-    <meta name="description" content="Patience Friday - BYU Idaho WDD 130 course home page">
-    <meta name="author" content="Patience Friday">
+    <meta name="description"
+        content="This is Patience Friday's BYU Idaho WDD 130 course home page. This page has information about Patience's city">
+    <meta name="author" content="Patience Aniekan Friday">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
