add changes to styles.css and index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 21 November 2025 -->
 <!DOCTYPE html>
 <html lang="en-Us">
 
@@ -16,6 +17,8 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://linkedin.com">LinkedIn</a>
+            <a href="https://facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
@@ -23,9 +26,27 @@
         <img src="images/profile.jpg" alt="Hello, I am Patience Friday" width="200">
         <p>Hello, my name is Patience Friday and I am from Akwa ibom state, Nigeria. I am studying web development in
             BYU Pathway Worldwide. This is a great opportunity and I am excited to be in this class. I hope to acquire
-            as much knowledge as I can, so I can be successful in the industry.</p>
+            as much knowledge as I can, so I can be successful in the industry.
+            I am also looking forward to learning new skills that will strengthen my creativity, problem-solving
+            and confidence as a developer. Web development has always interested me because it allows you to bring ideas
+            to
+            life, and I am eager to understand how real websites are built and how to improve them.
+            Being part of this program motivates me to stay focused, consistent, and open to learning from both my
+            instructors and classmates. I believe the experiences I gain here will prepare me for future opportunities
+            in the tech
+            world. My goal is to grow into a skilled developer who can create meaningful and impactful projects.
+            I am grateful for this chance to learn and improve, and I'm excited to see my progress throughout the
+            course.</p>
+        <ul class="box indent">
+            <li><a href="https://www.ch   abilities,urchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng"
+                    target="_blank">Aba Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/auckland-new-zealand-temple?lang=eng"
+                    target="_blank">Auckland New Zealand Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/billings-montana-temple?lang=eng"
+                    target="_blank">Billings Montana Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Akwa Ibom State</h2>
         <img src="images/uyo.jpg" alt="Uyo, Nigeria">
         <p>Uyo, the capital city of Akwa Ibom State in southern Nigeria, is a clean, calm, and rapidly developing city
