add corrections to rafting.css and about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>White Water Rafting</title>
+    <title>About Us | Whitewater Rafting</title>
     <meta name="description"
-        content="This page provides on overview of the purpose of the white water website, history, and other promotions for the company.">
+        content="This page provides on overview of the purpose of the white water website, history, and contact information of the company.">
     <meta name="author" content="Patience Aniekan Friday">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/rafting-logo.png" alt="Logo" width="100">
+        <img src="images/rafting-logo.png" alt="Company logo" width="100">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -26,7 +26,7 @@
     <main>
         <div class="hero">
             <img src="images/heroimage.jpg" alt="People rafting">
-            <h1>Whitewater Rafting</h1>
+            <h1>Whitewater Rafting!</h1>
             <article>
                 <img src="images/client.jpg" alt="Happy clients">
                 <p>Our mission is to provide exciting, fun, and affordable rafting adventures for individuals, families,
