add update to about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,14 +14,16 @@
 <body>
     <header>
         <img src="images/rafting-logo.png" alt="Company logo" width="100">
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="trips.html">Trips</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </nav>
+        <div id="logo">
+            <nav>
+                <ul class="navigation">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="trips.html">Trips</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="hero">
@@ -35,18 +37,51 @@
                     inspire a love for the outdoors and encourage people to explore beyond their comfort zones.</p>
             </article>
         </div>
-        <section>
+        <section class="grid1">
             <h2>History</h2>
-            <p>Whitewater began in 2018 when a small group of outdoor lovers turned their passion for
-                white-water rafting into a business. Starting with only a few rafts and local river tours, the company
+            <img src="images/rafting-history.jpg" alt="Water Rafting" width="300">
+            <p class="grid2">Whitewater began in 2018 when a small group of outdoor lovers turned their passion for
+                white-water rafting into a business. Starting with only a few rafts and local river tours, the
+                company
                 quickly grew as more
-                people sought safe, exciting outdoor experiences. Today, RapidsQuest Adventures is known for reliable
+                people sought safe, exciting outdoor experiences. Today, RapidsQuest Adventures is known for
+                reliable
                 guides, strong
                 safety standards, and unforgettable river adventures.</p>
+            <p>Over the years, the company expanded its services to include multi-day expeditions,
+                team-building
+                retreats, and beginner-friendly training sessions. Our commitment to customer care and environmental
+                responsibility
+                helped us build a loyal community of adventurers. As new rivers and routes were added to our
+                programs,
+                Whitewater grew
+                into a trusted name for anyone seeking a blend of thrill, nature, and professional guidance.</p>
         </section>
         <section>
             <h2>Adventure Awaits You!</h2>
+            <div class="flex">
+                <figure>
+                    <img src="images/adventure-one.jpg" alt="Blue Sea Adventure" width="150">
+                    <figcaption>Blue Sea Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure-two.jpg" alt="RapidsQuest Adventure" width="150">
+                    <figcaption>RapidsQuest Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure-three.jpg" alt="Whitewater Adventure" width="150">
+                    <figcaption>Whitewater Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure-four.jpg" alt="Rafting Adventure" width="150">
+                    <figcaption>Rafting Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/adventure-five.jpg" alt="Expeditions" width="150">
+                    <figcaption>Expeditions</figcaption>
+                </figure>
         </section>
+        </div>
     </main>
     <footer>
         <p>©2025 | Whitewater Rafting | Patience Friday</p>
