add changes to about.html

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -14,16 +14,14 @@
 <body>
     <header>
         <img src="images/rafting-logo.png" alt="Company logo" width="100">
-        <div id="logo">
-            <nav>
-                <ul class="navigation">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="trips.html">Trips</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
-                </ul>
-            </nav>
-        </div>
+        <nav>
+            <ul class="navigation">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
         <div class="hero">
@@ -77,11 +75,11 @@
                     <figcaption>Rafting Adventure</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/adventure-five.jpg" alt="Expeditions" width="150">
-                    <figcaption>Expeditions</figcaption>
+                    <img src="images/adventure-five.jpg" alt="Rapids Adventure" width="150">
+                    <figcaption>Rapids Adventure</figcaption>
                 </figure>
+            </div>
         </section>
-        </div>
     </main>
     <footer>
         <p>©2025 | Whitewater Rafting | Patience Friday</p>
