add changes to contact.html

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -35,33 +35,33 @@
             <form>
                 <div class="form-item column1">
                     <label for="name">Name:</label>
-                    <input type="text" id="name" class="name" placeholder="Maria Scott" required>
+                    <input type="text" id="name" name="name" placeholder="Maria Scott" required>
                 </div>
                 <div class="form-item column1">
                     <label for="email">Email:</label>
-                    <input type="text" id="email" class="email" placeholder="mariascott@gmail.com" required>
+                    <input type="text" id="email" name="email" placeholder="mariascott@gmail.com" required>
                 </div>
                 <p>Message Purpose</p>
+                <!-- <div class="column3"> -->
                 <div>
-                    <div>
-                        <input type="radio" id="choice1" name="choice1" value="choice1">
-                        <label for="choice1">General Inquiry</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="choice2" name="choice2" value="choice2">
-                        <label for="choice2">Reservation Question</label>
-                    </div>
-                    <div>
-                        <input type="radio" id="choice3" name="choice3" value="choice3">
-                        <label for="choice3">Website Suggestion</label>
-                    </div>
+                    <input type="radio" id="choice1" name="choice" value="choice1">
+                    <label for="choice1">General Inquiry</label>
                 </div>
+                <div>
+                    <input type="radio" id="choice2" name="choice" value="choice2">
+                    <label for="choice2">Reservation Question</label>
+                </div>
+                <div>
+                    <input type="radio" id="choice3" name="choice" value="choice3">
+                    <label for="choice3">Website Suggestion</label>
+                </div>
+                <!-- </div> -->
                 <div class="form-item column2">
                     <label for="message">Message</label>
-                    <textarea id="message" class="message" placeholder="Type here"></textarea>
+                    <textarea id="message" name="message" placeholder="Type here"></textarea>
                 </div>
                 <div class="label1">
-                    <input type="checkbox" id="newsletter" class="newsletter">
+                    <input type="checkbox" id="newsletter" name="newsletter">
                     <label for="newsletter">Please Subscribe me to the monthly newsletter</label>
                 </div>
                 <button type="submit">Get in Touch!</button>
