add changes to wwr directory

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us | Whitewater Rafting</title>
     <meta name="description"
-        content="This page provides on overview of the purpose of the white water website, history, and contact information of the company.">
+        content="This page provides an overview of the purpose of the white water website, history, and contact information of the company.">
     <meta name="author" content="Patience Aniekan Friday">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
