--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
@@ -42,7 +42,7 @@
                     <input type="text" id="email" name="email" placeholder="mariascott@gmail.com" required>
                 </div>
                 <p>Message Purpose</p>
-                <!-- <div class="column3"> -->
+
                 <div>
                     <input type="radio" id="choice1" name="choice" value="choice1">
                     <label for="choice1">General Inquiry</label>
@@ -55,7 +55,7 @@
                     <input type="radio" id="choice3" name="choice" value="choice3">
                     <label for="choice3">Website Suggestion</label>
                 </div>
-                <!-- </div> -->
+
                 <div class="form-item column2">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Type here"></textarea>
